// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionModal Component Dismiss on demand 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={false}
>
  <RNCSafeAreaView
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "minHeight": 1334,
          "paddingHorizontal": 25,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "marginTop": 54,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            Object {
              "fontWeight": "normal",
              "textAlign": "center",
            },
          ]
        }
        testID="com.ariesbifold:id/JustAMoment"
      >
        Connection.JustAMoment
      </Text>
      <View
        style={
          Array [
            Object {
              "marginTop": 40,
            },
          ]
        }
      >
        <View>
          <
            fill="#FFFFFF"
            height={250}
            width={250}
          />
          <View
            style={
              Object {
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotate": "360deg",
                  },
                ],
              }
            }
          >
            <
              fill="#FFFFFF"
              height={250}
              width={250}
            />
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`ConnectionModal Component Renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <RNCSafeAreaView
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "minHeight": 1334,
          "paddingHorizontal": 25,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "marginTop": 54,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            Object {
              "fontWeight": "normal",
              "textAlign": "center",
            },
          ]
        }
        testID="com.ariesbifold:id/JustAMoment"
      >
        Connection.JustAMoment
      </Text>
      <View
        style={
          Array [
            Object {
              "marginTop": 40,
            },
          ]
        }
      >
        <View>
          <
            fill="#FFFFFF"
            height={250}
            width={250}
          />
          <View
            style={
              Object {
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          >
            <
              fill="#FFFFFF"
              height={250}
              width={250}
            />
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`ConnectionModal Component Updates after delay 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <RNCSafeAreaView
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "minHeight": 1334,
          "paddingHorizontal": 25,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "marginTop": 54,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            Object {
              "fontWeight": "normal",
              "textAlign": "center",
            },
          ]
        }
        testID="com.ariesbifold:id/JustAMoment"
      >
        Connection.JustAMoment
      </Text>
      <View
        style={
          Array [
            Object {
              "marginTop": 40,
            },
          ]
        }
      >
        <View>
          <
            fill="#FFFFFF"
            height={250}
            width={250}
          />
          <View
            style={
              Object {
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotate": "360deg",
                  },
                ],
              }
            }
          >
            <
              fill="#FFFFFF"
              height={250}
              width={250}
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 30,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "marginBottom": 30,
                "textAlign": "center",
              },
            ]
          }
          testID="com.ariesbifold:id/TakingTooLong"
        >
          Connection.TakingTooLong
        </Text>
        <View
          accessibilityLabel="Loading.BackToHome"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/BackToHome"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#42803E",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Loading.BackToHome
          </Text>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;
